add recent pxf topic additions to subnav

--- a/gpdb-doc/book/master_middleman/source/subnavs/pxf-subnav.erb
+++ b/gpdb-doc/book/master_middleman/source/subnavs/pxf-subnav.erb
@@ -22,6 +22,7 @@
               <li><a href="/6-0/pxf/about_pxf_dir.html" format="markdown">About the PXF Installation and Configuration Directories</a></li>
               <li><a href="/6-0/pxf/install_java.html" format="markdown">Installing Java for PXF</a></li>
               <li><a href="/6-0/pxf/init_pxf.html" format="markdown">Initializing PXF</a></li>
+              <li><a href="/6-0/pxf/cfg_server.html" format="markdown">About PXF Server Configuration</a></li>
               <li class="has_submenu">
                 <a href="/6-0/pxf/client_instcfg.html" format="markdown">Configuring PXF Hadoop Connectors (Optional)</a>
                 <ul>
@@ -37,7 +38,7 @@
               <li><a href="/6-0/pxf/jdbc_cfg.html" format="markdown">Configuring the JDBC Connector (Optional)</a> </li>
               <li><a href="/6-0/pxf/cfghostport.html" format="markdown">Configuring the PXF Agent Host and Port (Optional)</a> </li>
             </ul>
-          </lie>
+          </li>
           <li><a href="/6-0/pxf/upgrade_pxf.html" format="markdown">Upgrading PXF</a></li>
           <li><a href="/6-0/pxf/cfginitstart_pxf.html" format="markdown">Starting, Stopping, and Restarting PXF</a></li>
           <li><a href="/6-0/pxf/using_pxf.html" format="markdown">Granting Users Access to PXF</a></li>
@@ -53,6 +54,7 @@
           <li><a href="/6-0/pxf/hdfs_json.html" format="markdown">Reading JSON Data</a></li>
           <li><a href="/6-0/pxf/hdfs_parquet.html" format="markdown">Reading and Writing Parquet Data</a></li>
           <li><a href="/6-0/pxf/hdfs_seqfile.html" format="markdown">Reading and Writing SequenceFile Data</a></li>
+          <li><a href="/6-0/pxf/hdfs_fileasrow.html" format="markdown">Reading a Multi-Line Text File into a Single Table Row</a></li>
           <li><a href="/6-0/pxf/hive_pxf.html" format="markdown">Reading Hive Table Data</a></li>
           <li><a href="/6-0/pxf/hbase_pxf.html" format="markdown">Reading HBase Table Data</a></li>
         </ul>
@@ -65,6 +67,7 @@
           <li><a href="/6-0/pxf/objstore_json.html" format="markdown">Reading JSON Data</a></li>
           <li><a href="/6-0/pxf/objstore_parquet.html" format="markdown">Reading and Writing Parquet Data</a></li>
           <li><a href="/6-0/pxf/objstore_seqfile.html" format="markdown">Reading and Writing SequenceFile Data</a></li>
+          <li><a href="/6-0/pxf/objstore_fileasrow.html" format="markdown">Reading a Multi-Line Text File into a Single Table Row</a></li>
         </ul>
       </li>
       <li><a href="/6-0/pxf/jdbc_pxf.html" format="markdown">Accessing an SQL Database with PXF (JDBC)</a></li>
